[gd_scene load_steps=24 format=3 uid="uid://7q8bvtavfqwc"]

[ext_resource type="Script" uid="uid://cbw3cuut0fkmc" path="res://Mobs/Mobs_Scripts/Walter/character_body_2d.gd" id="1_pel6o"]
[ext_resource type="Texture2D" uid="uid://cmwhk5nko6en6" path="res://Sprites_Walter/Patotas.png" id="2_7i0ls"]
[ext_resource type="Texture2D" uid="uid://4d0vox8ira87" path="res://Sprites_Walter/Pepe.png" id="3_2n4ld"]
[ext_resource type="Texture2D" uid="uid://dx18mhn8kcys0" path="res://Sprites_Walter/Torso.png" id="4_a8cc0"]
[ext_resource type="Texture2D" uid="uid://dnxran7kpeg7v" path="res://Sprites_Walter/Brazo.png" id="5_yp0q4"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="6_k31ow"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="7_ec7i0"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="8_2pljw"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="9_i7ldd"]
[ext_resource type="Texture2D" uid="uid://bllqc4hu1jmnt" path="res://icon.svg" id="10_gkbsn"]

[sub_resource type="Animation" id="Animation_uk5b5"]
resource_name = "Exaust"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Walter:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.235619]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Walter:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10, -13)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Torso/Torso2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Torso/Torso2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.113446]
}

[sub_resource type="Animation" id="Animation_rw715"]
resource_name = "Hands"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand_one/Brazo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333334, 1.16667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Torso/Torso2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.13333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Torso/Torso2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.1333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(3, 2), Vector2(3, 3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Patotas:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("%Torso2:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("%Walter:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%Walter:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}

[sub_resource type="Animation" id="Animation_tchdt"]
resource_name = "Interact"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand_one/Brazo:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand_one/Brazo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4, -12), Vector2(4, -12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hand_one/Brazo:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(-0.133333, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_sw7dn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand_one/Brazo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand_one/Brazo:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hand_one/Brazo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, -13)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Torso/Torso2:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Torso/Torso2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 2)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Patotas:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Torso/Torso2:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.113446]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Walter:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10, -11)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Walter:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.10472]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("%Torso2:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("%Torso2:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.113446]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("%Torso2:flip_h")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("%Patotas:flip_h")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("%Walter:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, -11)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("%Walter:rotation")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.10472]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("%Walter:flip_h")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("%Brazo:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, -13)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("%Brazo:flip_h")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_amkqj"]
resource_name = "Run"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Patotas:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Torso/Torso2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.113446]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Torso/Torso2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("Walter:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10, -11)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Walter:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.10472]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("%Walter:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%Brazo:flip_h")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("%Brazo:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, -13)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("%Torso2:flip_h")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("%Walter:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, -10)]
}

[sub_resource type="Animation" id="Animation_1sbdv"]
resource_name = "Walk_D_2"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Patotas:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("%Torso2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%Torso2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.10472]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("%Torso2:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("%Patotas:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("%Walter:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, -10)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%Walter:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.10472]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("%Walter:flip_h")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("%Brazo:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, -13)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("%Brazo:flip_h")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_74ytv"]
_data = {
&"Exaust": SubResource("Animation_uk5b5"),
&"Hands": SubResource("Animation_rw715"),
&"Interact": SubResource("Animation_tchdt"),
&"RESET": SubResource("Animation_sw7dn"),
&"Walk_D": SubResource("Animation_amkqj"),
&"Walk_I": SubResource("Animation_1sbdv")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uk5b5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uk5b5"]
size = Vector2(722, 77)

[sub_resource type="QuadMesh" id="QuadMesh_uk5b5"]

[sub_resource type="Texture2DRD" id="Texture2DRD_uk5b5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uk5b5"]
radius = 70.0

[sub_resource type="Texture2DRD" id="Texture2DRD_1sbdv"]

[node name="Prueba" type="Node"]

[node name="Player_Base" type="Node2D" parent="."]

[node name="Walter" type="CharacterBody2D" parent="Player_Base"]
script = ExtResource("1_pel6o")

[node name="Skeleton2D" type="Skeleton2D" parent="Player_Base/Walter"]
rotation = -0.0575959
scale = Vector2(1.2, 1)
skew = 0.218166

[node name="Patotas" type="Sprite2D" parent="Player_Base/Walter/Skeleton2D"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(0, 6)
texture = ExtResource("2_7i0ls")
flip_h = true
hframes = 4
vframes = 3

[node name="Walter" type="Sprite2D" parent="Player_Base/Walter/Skeleton2D"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(10, -11)
rotation = -0.10472
texture = ExtResource("3_2n4ld")
flip_h = true
hframes = 4
vframes = 2

[node name="Torso" type="Bone2D" parent="Player_Base/Walter/Skeleton2D"]
position = Vector2(-3, 4)
rest = Transform2D(1, 0, 0, 1, -3, 4)
editor_settings/show_bone_gizmo = false

[node name="Torso2" type="Sprite2D" parent="Player_Base/Walter/Skeleton2D/Torso"]
unique_name_in_owner = true
z_index = -1
texture_filter = 1
position = Vector2(2, 2)
rotation = -0.113446
texture = ExtResource("4_a8cc0")
flip_h = true
hframes = 4
frame = 1

[node name="Hand_one" type="Bone2D" parent="Player_Base/Walter/Skeleton2D"]
position = Vector2(-4, 20)
editor_settings/show_bone_gizmo = false

[node name="Brazo" type="Sprite2D" parent="Player_Base/Walter/Skeleton2D/Hand_one"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(-4, -13)
scale = Vector2(0.7, 0.5)
texture = ExtResource("5_yp0q4")
offset = Vector2(3.6, 9)
flip_h = true
hframes = 4

[node name="Corpse" type="AnimationPlayer" parent="Player_Base/Walter/Skeleton2D"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_74ytv")
}

[node name="Estados_Base" type="Node" parent="Player_Base/Walter"]
unique_name_in_owner = true
script = ExtResource("6_k31ow")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="CompoundState" type="Node" parent="Player_Base/Walter/Estados_Base"]
script = ExtResource("7_ec7i0")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="Idle" type="Node" parent="Player_Base/Walter/Estados_Base/CompoundState"]
script = ExtResource("8_2pljw")

[node name="to_in" type="Node" parent="Player_Base/Walter/Estados_Base/CompoundState/Idle"]
script = ExtResource("9_i7ldd")
to = NodePath("../../Interact")
event = &"To_interact"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="To_Walk" type="Node" parent="Player_Base/Walter/Estados_Base/CompoundState/Idle"]
script = ExtResource("9_i7ldd")
to = NodePath("../../Walk")
event = &"To_Walk"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Interact" type="Node" parent="Player_Base/Walter/Estados_Base/CompoundState"]
script = ExtResource("8_2pljw")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="to_idle" type="Node" parent="Player_Base/Walter/Estados_Base/CompoundState/Interact"]
script = ExtResource("9_i7ldd")
to = NodePath("../../Idle")
event = &"To_Idle"
delay_in_seconds = "0.5"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="To_Walk" type="Node" parent="Player_Base/Walter/Estados_Base/CompoundState/Interact"]
script = ExtResource("9_i7ldd")
to = NodePath("../../Walk")
event = &"To_Walk"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Walk" type="Node" parent="Player_Base/Walter/Estados_Base/CompoundState"]
script = ExtResource("8_2pljw")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="Interact" type="Node" parent="Player_Base/Walter/Estados_Base/CompoundState/Walk"]
script = ExtResource("9_i7ldd")
to = NodePath("../../Interact")
event = &"To_interact"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Idle" type="Node" parent="Player_Base/Walter/Estados_Base/CompoundState/Walk"]
script = ExtResource("9_i7ldd")
to = NodePath("../../Idle")
event = &"To_idle"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Camera2D" type="Camera2D" parent="Player_Base/Walter"]
position = Vector2(10, -8)
zoom = Vector2(2, 2)
limit_smoothed = true

[node name="Box" type="CollisionShape2D" parent="Player_Base/Walter"]
position = Vector2(0, 21)
shape = SubResource("CapsuleShape2D_uk5b5")

[node name="StaticBody2D" type="StaticBody2D" parent="Player_Base"]
position = Vector2(-1, 156)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_Base/StaticBody2D"]
modulate = Color(1, 1, 0.815686, 1)
shape = SubResource("RectangleShape2D_uk5b5")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Player_Base/StaticBody2D/CollisionShape2D"]
position = Vector2(-0.214912, -0.0840981)
scale = Vector2(-725.347, 76.9676)
mesh = SubResource("QuadMesh_uk5b5")

[node name="Joys" type="CanvasLayer" parent="Player_Base"]

[node name="Control" type="Control" parent="Player_Base/Joys"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -97.0
offset_top = -70.0
offset_right = -1037.0
offset_bottom = -589.0
grow_horizontal = 2
grow_vertical = 2

[node name="InT" type="Button" parent="Player_Base/Joys/Control"]
layout_mode = 0
offset_left = 1030.0
offset_top = 549.0
offset_right = 1247.0
offset_bottom = 665.0
text = "Inter"

[node name="Izquierda" type="TouchScreenButton" parent="Player_Base/Joys/Control"]
position = Vector2(242, 552)
scale = Vector2(1.10937, 1.0625)
texture_normal = ExtResource("10_gkbsn")
texture_pressed = SubResource("Texture2DRD_uk5b5")
shape = SubResource("CircleShape2D_uk5b5")
passby_press = true
action = "ui_left"

[node name="Derecha" type="TouchScreenButton" parent="Player_Base/Joys/Control"]
position = Vector2(460, 549)
scale = Vector2(1.10156, 1.05469)
texture_normal = ExtResource("10_gkbsn")
texture_pressed = SubResource("Texture2DRD_1sbdv")
shape = SubResource("CircleShape2D_uk5b5")
action = "ui_right"

[connection signal="state_processing" from="Player_Base/Walter/Estados_Base/CompoundState/Idle" to="Player_Base/Walter" method="_on_idle_state_processing"]
[connection signal="state_entered" from="Player_Base/Walter/Estados_Base/CompoundState/Interact" to="Player_Base/Walter" method="_on_interact_state_entered"]
[connection signal="state_processing" from="Player_Base/Walter/Estados_Base/CompoundState/Interact" to="Player_Base/Walter" method="_on_interact_state_processing"]
[connection signal="state_entered" from="Player_Base/Walter/Estados_Base/CompoundState/Walk" to="Player_Base/Walter" method="_on_walk_state_entered"]
[connection signal="state_processing" from="Player_Base/Walter/Estados_Base/CompoundState/Walk" to="Player_Base/Walter" method="_on_walk_state_processing"]
[connection signal="pressed" from="Player_Base/Joys/Control/InT" to="Player_Base/Walter" method="_on_in_t_pressed"]
